Update header and footer to be less redundant
Fix "Scratch Foundation" link

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         <div>
             <a href="#home"><h1 class="scratchx-logo"><span>ScratchX</span></h1></a>
             <nav class="main-nav">
-            Related Sites:
             <ul>
-                <li><a href="https://scratch.mit.edu/">Scratch</a></li>
-                <li><a href="http://scratched.gse.harvard.edu">ScratchEd</a></li>
-                <li><a href="http://www.scratchjr.org/">ScratchJr</a></li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#extensions">See all Extensions</a></li>
             </ul>
             </nav>
         </div>
@@ -214,7 +212,7 @@
                     <li><a href="#privacy-policy">Privacy Policy</a></li>
                     <li><a href="mailto:scratch-extensions@scratch.mit.edu">Contact Us</a></li>
                     <li><a href="#faq">FAQ</a></li>
-                    <li><a href="https://scratch.mit.edu/discuss/48/">Forum</a></li>
+                    <li><a href="https://scratch.mit.edu/discuss/48/">Forums</a></li>
                 </ul>
             </nav>
 
@@ -226,7 +224,7 @@
                     <li><a href="http://www.scratchjr.org/">ScratchJr</a></li>
                     <li><a href="https://scratch.mit.edu/conference/">Scratch Conference</a></li>
                     <li><a href="http://day.scratch.mit.edu/">Scratch Day</a></li>
-                    <li><a href="http://codetolearn.org/">Code-to-Learn Foundation</a></li>
+                    <li><a href="http://codetolearn.org/">Scratch Foundation</a></li>
                 </ul>
             </nav>
         </div>
