--- a/index.html
+++ b/index.html
@@ -93,6 +93,178 @@
             </div>
         </section>
     </article>
+    <article id="extensions">
+        <section>
+            <div class="intro">
+                <div>
+                    <h1>Gallery of Experimental Extensions</h1>
+                    <p>With Experimental Extensions, you can create Scratch projects that connect with external hardware and online resources. Try examples below to see the wide variety of things you can do with Experimental Extensions!</p>
+
+                    <p>If you are a developer with an extension that you'd like to submit to our gallery, read more about the <a href="#faq-submission-process">submission process here</a>.</p>
+                </div>
+            </div>
+        </section>
+        <aside class="warning message"><strong>Warning:</strong> all extensions are experimental and not a product of the Scratch Team. <a href="#faq">Find out more</a></aside>
+        <section class="gallery">
+            <div>
+                <ul>
+                    <li>
+                        <a href="?url=http://khanning.github.io/scratch-arduino-extension/arduino_extension.js" data-action="load-url">
+                            <header>
+                                <h2>Arduino</h2>
+                                <p class="author">Kreg Hanning, David Mellis</p>
+                            </header>
+                            <img src="/images/extensions/arduino_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Control Arduino boards</p>
+                            <a href="http://khanning.github.io/scratch-arduino-extension/examples/Arduino%20Example%20-%20Blink%20a%20LED.sbx">Sample Project</a>
+                            <a href="http://khanning.github.io/scratch-arduino-extension/">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension"></span>
+                        </section>
+                    </li>
+                    <li>
+                        <a href="?url=http://technoboy10.github.io/mesh/mesh.js" data-action="load-url">
+                            <header>
+                                <h2>Firebase Mesh</h2>
+                                <p class="author">Connor Hudson</p>
+                            </header>
+                            <img src="/images/extensions/extension.png" />
+                        </a>
+                        <section class="description">
+                            <p>Broadcast messages to other projects!</p>
+                            <a href="#">Sample Project</a>
+                            <a href="http://technoboy10.tk/mesh/">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag web" title="Web Extension"></span>
+                        </section>
+                    </li>
+                    <li>
+                        <a href="?url=http://intel-realsense-extension-for-scratch.github.io/public/extension/intel_realsense_extension.js" data-action="load-url">
+                            <header>
+                                <h2>Intel&reg; RealSense&trade;</h2>
+                                <p class="author">Shachar Oz, Yaron Yanai, Avi Salmon</p>
+                            </header>
+                            <img src="/images/extensions/extension.png" />
+                        </a>
+                        <section class="description">
+                            <p>Hand Gestures, face tracking, voice commands</p>
+                            <a href="http://intel-realsense-extension-for-scratch.github.io/public/extension/samples/simplest-realsense-blocks.sbx">Sample Project</a>
+                            <a href="http://intel-realsense-extension-for-scratch.github.io/public">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension"></span>
+                        </section>
+                    </li>
+                    <li>
+                        <a href="?url=https://khanning.github.io/scratch-isstracker-extension/iss_extension.js" data-action="load-url">
+                            <header>
+                                <h2>ISS Tracker</h2>
+                                <p class="author">Kreg Hanning</p>
+                            </header>
+                            <img src="/images/extensions/ISSTracker_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>International Space Station tracker</p>
+                            <a href="http://khanning.github.io/scratch-isstracker-extension/examples/ISS%20Tracker.sbx">Sample Project</a>
+                            <a href="http://khanning.github.io/scratch-isstracker-extension/">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag web" title="Web Extension"></span>
+                        </section>
+                    </li>
+                    <li>
+                        <a href="?url=http://khanning.github.io/scratch-leapmotion-extension/leapmotion_extension.js" data-action="load-url">
+                            <header>
+                                <h2>Leapmotion</h2>
+                                <p class="author">Kreg Hanning</p>
+                            </header>
+                            <img src="/images/extensions/leapmotion_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Hand and finger tracking</p>
+                            <a href="http://khanning.github.io/scratch-leapmotion-extension/examples/Leap%20Motion%20Example%20-%20Hand%20Skeleton.sbx">Sample Project</a>
+                            <a href="http://khanning.github.io/scratch-leapmotion-extension/">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension"></span>
+                        </section>
+                    </li>
+                    <li>
+                        <a href="?url=http://khanning.github.io/scratch-littlebits-extension/littlebits_extension.js" data-action="load-url">
+                            <header>
+                                <h2>littleBits</h2>
+                                <p class="author">Kreg Hanning</p>
+                            </header>
+                            <img src="/images/extensions/extension.png" />
+                        </a>
+                        <section class="description">
+                            <p>Control littleBits creations</p>
+                            <a href="http://khanning.github.io/scratch-littlebits-extension/examples/littleBits%20-%20Move%20with%20Dimmer.sbx">Sample Project</a>
+                            <a href="http://khanning.github.io/scratch-littlebits-extension/">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension"></span>
+                        </section>
+                    </li>
+                    <li>
+                        <a href="?url=http://sayamindu.github.io/scratch-extensions/text_to_speech_extension.js" data-action="load-url">
+                            <header>
+                                <h2>Text to Speech</h2>
+                                <p class="author">Sayamindu Dasgupta</p>
+                            </header>
+                            <img src="/images/extensions/extension.png" />
+                        </a>
+                        <section class="description">
+                            <p>Use Scratch to read text out loud</p>
+                            <a href="#">Sample Project</a>
+                            <a href="#">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag web" title="Web Extension"></span>
+                        </section>
+                    </li>
+                    <li>
+                        <a href="?url=https://technoboy10.github.io/twitter/extension.js" data-action="load-url">
+                            <header>
+                                <h2>Twitter</h2>
+                                <p class="author">Connor Hudson and Kreg Hanning</p>
+                            </header>
+                            <img src="/images/extensions/extension.png" />
+                        </a>
+                        <section class="description">
+                            <p>Use Twitter in your projects!</p>
+                            <a href="?url=https://technoboy10.github.io/twitter/extension.js">Sample Project</a>
+                            <a href="http://technoboy10.tk/twitter/">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag web" title="Web Extension"></span>
+                        </section>
+                    </li>
+                    <li>
+                        <a href="?url=https://MrYsLab.github.io/xi4s.js" data-action="load-url">
+                            <header>
+                                <h2>Xi - Multi uC Interconnect</h2>
+                                <p class="author">Alan Yorinks</p>
+                            </header>
+                            <img src="/images/extensions/xi3_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Control for Arduino, <acronym title="Raspberry Pi">RPi</acronym> and <acronym title="BeagleBone Black">BBB</acronym></p>
+                            <a href="https://github.com/MrYsLab/xi/blob/master/clients/scratch/projects/blink.sbx">Sample Project</a>
+                            <a href="https://github.com/MrYsLab/xi">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension"></span>
+                        </section>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </article>
     <article id="privacy-policy">
         <section>
             <div>
