Fix style on non-gallery pages, fix ul indentation

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         </section>
     </article>
     <article id="extensions">
-        <section>
-            <div class="intro">
+        <section class="intro">
+            <div>
                 <div>
                     <h1>Gallery of Experimental Extensions</h1>
                     <p>With Experimental Extensions, you can create Scratch projects that connect with external hardware and online resources. Try examples below to see the wide variety of things you can do with Experimental Extensions!</p>
