Remove nonexistent link

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <h1>Gallery of Experimental Extensions</h1>
                     <p>With Experimental Extensions, you can create Scratch projects that connect with external hardware and online resources. Try examples below to see the wide variety of things you can do with Experimental Extensions!</p>
 
-                    <p>If you are a developer with an extension that you'd like to submit to our gallery, read more about the <a href="#faq-submission-process">submission process here</a>.</p>
+                    <p>If you are a developer with an extension that you'd like to submit to our gallery, read more about the <a href="">submission process here</a>.</p>
                 </div>
             </div>
         </section>
