Don't reload when clicking from the gallery

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         </a>
                         <section class="description">
                             <p>Control Arduino boards</p>
-                            <a href="http://khanning.github.io/scratch-arduino-extension/examples/Arduino%20Example%20-%20Blink%20a%20LED.sbx">Sample Project</a>
+                            <a href="http://khanning.github.io/scratch-arduino-extension/examples/Arduino%20Example%20-%20Blink%20a%20LED.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://khanning.github.io/scratch-arduino-extension/">Documentation</a>
                         </section>
                         <section class="tags">
@@ -163,7 +163,7 @@
                         </a>
                         <section class="description">
                             <p>Broadcast messages to other projects!</p>
-                            <a href="">Sample Project</a>
+                            <a href="" data-action="load-url">Sample Project</a>
                             <a href="http://technoboy10.tk/mesh/">Documentation</a>
                         </section>
                         <section class="tags">
@@ -180,7 +180,7 @@
                         </a>
                         <section class="description">
                             <p>Hand Gestures, face tracking, voice commands</p>
-                            <a href="http://intel-realsense-extension-for-scratch.github.io/public/extension/samples/simplest-realsense-blocks.sbx">Sample Project</a>
+                            <a href="http://intel-realsense-extension-for-scratch.github.io/public/extension/samples/simplest-realsense-blocks.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://intel-realsense-extension-for-scratch.github.io/public">Documentation</a>
                         </section>
                         <section class="tags">
@@ -197,7 +197,7 @@
                         </a>
                         <section class="description">
                             <p>International Space Station tracker</p>
-                            <a href="http://khanning.github.io/scratch-isstracker-extension/examples/ISS%20Tracker.sbx">Sample Project</a>
+                            <a href="http://khanning.github.io/scratch-isstracker-extension/examples/ISS%20Tracker.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://khanning.github.io/scratch-isstracker-extension/">Documentation</a>
                         </section>
                         <section class="tags">
@@ -214,7 +214,7 @@
                         </a>
                         <section class="description">
                             <p>Hand and finger tracking</p>
-                            <a href="http://khanning.github.io/scratch-leapmotion-extension/examples/Leap%20Motion%20Example%20-%20Hand%20Skeleton.sbx">Sample Project</a>
+                            <a href="http://khanning.github.io/scratch-leapmotion-extension/examples/Leap%20Motion%20Example%20-%20Hand%20Skeleton.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://khanning.github.io/scratch-leapmotion-extension/">Documentation</a>
                         </section>
                         <section class="tags">
@@ -231,7 +231,7 @@
                         </a>
                         <section class="description">
                             <p>Control littleBits creations</p>
-                            <a href="http://khanning.github.io/scratch-littlebits-extension/examples/littleBits%20-%20Move%20with%20Dimmer.sbx">Sample Project</a>
+                            <a href="http://khanning.github.io/scratch-littlebits-extension/examples/littleBits%20-%20Move%20with%20Dimmer.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://khanning.github.io/scratch-littlebits-extension/">Documentation</a>
                         </section>
                         <section class="tags">
@@ -248,7 +248,7 @@
                         </a>
                         <section class="description">
                             <p>Use Scratch to read text out loud</p>
-                            <a href="">Sample Project</a>
+                            <a href="" data-action="load-url">Sample Project</a>
                             <a href="">Documentation</a>
                         </section>
                         <section class="tags">
@@ -265,7 +265,7 @@
                         </a>
                         <section class="description">
                             <p>Use Twitter in your projects!</p>
-                            <a href="?url=https://technoboy10.github.io/twitter/extension.js">Sample Project</a>
+                            <a href="?url=https://technoboy10.github.io/twitter/extension.js" data-action="load-url">Sample Project</a>
                             <a href="http://technoboy10.tk/twitter/">Documentation</a>
                         </section>
                         <section class="tags">
@@ -282,7 +282,7 @@
                         </a>
                         <section class="description">
                             <p>Control for Arduino, <acronym title="Raspberry Pi">RPi</acronym> and <acronym title="BeagleBone Black">BBB</acronym></p>
-                            <a href="https://github.com/MrYsLab/xi/blob/master/clients/scratch/projects/blink.sbx">Sample Project</a>
+                            <a href="https://github.com/MrYsLab/xi/blob/master/clients/scratch/projects/blink.sbx" data-action="load-url">Sample Project</a>
                             <a href="https://github.com/MrYsLab/xi">Documentation</a>
                         </section>
                         <section class="tags">
