Add actual home featured extensions

--- a/index.html
+++ b/index.html
@@ -36,43 +36,43 @@
 
             <ul class="featured-extensions">
                 <li class="featured-extension">
-                    <a href="?url=https://khanning.github.io/scratch-isstracker-extension/iss_extension.js" data-action="load-url">
-                        <img src="images/extensions/ISSTracker_small.png" />
+                    <a href="?url=https://technoboy10.github.io/twitter/extension.js" data-action="load-url">
+                        <img src="images/extensions/extension.png" />
                         <span class="button tryit">Try it!</span>
                     </a>
                     <section>
-                        <h2>ISS Tracker</h2>
-                        <p class="author">Kreg Hanning</p>
+                        <h2>Twitter</h2>
+                        <p class="author">Connor Hudson and Kreg Hanning</p>
                     </section>
                 </li>
                 <li class="featured-extension">
-                    <a href="?url=https://khanning.github.io/scratch-isstracker-extension/iss_extension.js" data-action="load-url">
-                        <img src="images/extensions/ISSTracker_small.png" />
+                    <a href="" data-action="load-url">
+                        <img src="images/extensions/extension.png" />
                         <span class="button tryit">Try it!</span>
                     </a>
                     <section>
-                        <h2>ISS Tracker</h2>
-                        <p class="author">Kreg Hanning</p>
+                        <h2>tone.js</h2>
+                        <p class="author">Eric Rosenbaum</p>
                     </section>
                 </li>
                 <li class="featured-extension">
-                    <a href="?url=https://khanning.github.io/scratch-isstracker-extension/iss_extension.js" data-action="load-url">
-                        <img src="images/extensions/ISSTracker_small.png" />
+                    <a href="?url=http://sayamindu.github.io/scratch-extensions/text_to_speech_extension.js" data-action="load-url">
+                        <img src="images/extensions/extension.png" />
                         <span class="button tryit">Try it!</span>
                     </a>
                     <section>
-                        <h2>ISS Tracker</h2>
-                        <p class="author">Kreg Hanning</p>
+                        <h2>Text to Speech</h2>
+                        <p class="author">Sayamindu Dasgupta</p>
                     </section>
                 </li>
                 <li class="featured-extension">
-                    <a href="?url=https://khanning.github.io/scratch-isstracker-extension/iss_extension.js" data-action="load-url">
-                        <img src="images/extensions/ISSTracker_small.png" />
+                    <a href="?url=http://khanning.github.io/scratch-arduino-extension/arduino_extension.js" data-action="load-url">
+                        <img src="images/extensions/arduino_small.png" />
                         <span class="button tryit">Try it!</span>
                     </a>
                     <section>
-                        <h2>ISS Tracker</h2>
-                        <p class="author">Kreg Hanning</p>
+                        <h2>Arduino</h2>
+                        <p class="author">Kreg Hanning, David Mellis</p>
                     </section>
                 </li>
             </ul>
