Add tone.js to gallery

--- a/index.html
+++ b/index.html
@@ -256,6 +256,23 @@
                         </section>
                     </li>
                     <li>
+                        <a href="" data-action="load-url">
+                            <header>
+                                <h2>tone.js</h2>
+                                <p class="author">Eric Rosenbaum</p>
+                            </header>
+                            <img src="images/extensions/extension.png" />
+                        </a>
+                        <section class="description">
+                            <p>Music extension</p>
+                            <a href="" data-action="load-url">Sample Project</a>
+                            <a href="">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag web" title="Web Extension"></span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=https://technoboy10.github.io/twitter/extension.js" data-action="load-url">
                             <header>
                                 <h2>Twitter</h2>
