List authors consistently

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         <a href="?url=https://technoboy10.github.io/twitter/extension.js" data-action="load-url">
                             <header>
                                 <h2>Twitter</h2>
-                                <p class="author">Connor Hudson and Kreg Hanning</p>
+                                <p class="author">Connor Hudson, Kreg Hanning</p>
                             </header>
                             <img src="images/extensions/extension.png" />
                         </a>
