Add missing links for some sample projects, etc

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
                     </section>
                 </li>
                 <li class="featured-extension">
-                    <a href="" data-action="load-url">
+                    <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/examples/Bouncing%20Synth%20Ball.sbx" data-action="load-url">
                         <img src="images/extensions/extension.png" />
                         <span class="button tryit">Try it!</span>
                     </a>
                     <section>
-                        <h2>tone.js</h2>
+                        <h2>Tone Synth</h2>
                         <p class="author">Eric Rosenbaum</p>
                     </section>
                 </li>
                 <li class="featured-extension">
-                    <a href="?url=http://sayamindu.github.io/scratch-extensions/text_to_speech_extension.js" data-action="load-url">
+                    <a href="?url=http://sayamindu.github.io/scratch-extensions/text-to-speech/TalkingGobo.sbx" data-action="load-url">
                         <img src="images/extensions/extension.png" />
                         <span class="button tryit">Try it!</span>
                     </a>
@@ -98,7 +98,7 @@
                 <div>
                     <div>
                         <h2 class="logo-scratchx">ScratchX</h2>
-                        <p>On the ScratchX website, you can play with Experimental Extensions to Scratch. Because these extensions are experimental and not enforsed or supported by the Scratch Team, they are available only on the ScratchX site, not the main Scratch site. <a href="#scratch">Try out ScratchX</a></p>
+                        <p>On the ScratchX website, you can play with Experimental Extensions to Scratch. Because these extensions are experimental and not enforsed or supported by the Scratch Team, they are available only on the ScratchX site, not the main Scratch site. <a href="#extensions">Try out ScratchX</a></p>
                     </div>
                 </div>
             </div></div>
@@ -107,7 +107,7 @@
             <div><div>
                 <div>
                     <h2>Who uses ScratchX?</h2>
-                    <p><strong>Anyone</strong> can access and play with Experimental Extensions on ScratchX. Integrate <a href="">Twitter</a> feeds into your Scratch project, connect with hardware like <a href="">Arduino</a> and <a href="">Raspberry Pi</a>, and <a href="">much much more.</a></p>
+                    <p><strong>Anyone</strong> can access and play with Experimental Extensions on ScratchX. Integrate Twitter feeds into your Scratch project, connect with hardware like Arduino and Raspberry Pi, and <a href="#extensions">much much more.</a></p>
 
                     <p><strong>Developers</strong> can use ScratchX to create and test new Experimental Extensions. Learn more about ScratchX in our <a href="https://github.com/LLK/scratchx/wiki/">developer documentation</a></p>
                 </div>
@@ -128,7 +128,7 @@
                     <h1>Gallery of Experimental Extensions</h1>
                     <p>With Experimental Extensions, you can create Scratch projects that connect with external hardware and online resources. Try examples below to see the wide variety of things you can do with Experimental Extensions!</p>
 
-                    <p>If you are a developer with an extension that you'd like to submit to our gallery, read more about the <a href="">submission process here</a>.</p>
+                    <p>If you are a developer with an extension that you'd like to submit to our gallery, read more about the <a href="https://github.com/LLK/scratchx/wiki#how-do-i-submit-my-extension-for-consideration-on-scratchx">submission process here</a>.</p>
                 </div>
             </div>
         </section>
@@ -163,7 +163,7 @@
                         </a>
                         <section class="description">
                             <p>Broadcast messages to other projects!</p>
-                            <a href="" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://technoboy10.tk/mesh/mesh.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://technoboy10.tk/mesh/">Documentation</a>
                         </section>
                         <section class="tags">
@@ -248,25 +248,25 @@
                         </a>
                         <section class="description">
                             <p>Use Scratch to read text out loud</p>
-                            <a href="" data-action="load-url">Sample Project</a>
-                            <a href="">Documentation</a>
+                            <a href="?url=http://sayamindu.github.io/scratch-extensions/text-to-speech/TalkingGobo.sbx" data-action="load-url">Sample Project</a>
+                            <a href="http://sayamindu.github.io/scratch-extensions/text-to-speech">Documentation</a>
                         </section>
                         <section class="tags">
                             <span class="tag web" title="Web Extension"></span>
                         </section>
                     </li>
                     <li>
-                        <a href="" data-action="load-url">
+                        <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/tone-synth.js" data-action="load-url">
                             <header>
-                                <h2>tone.js</h2>
+                                <h2>Tone Synth</h2>
                                 <p class="author">Eric Rosenbaum</p>
                             </header>
                             <img src="images/extensions/extension.png" />
                         </a>
                         <section class="description">
-                            <p>Music extension</p>
-                            <a href="" data-action="load-url">Sample Project</a>
-                            <a href="">Documentation</a>
+                            <p>Code your own funky electronic music</p>
+                            <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/examples/Bouncing%20Synth%20Ball.sbx" data-action="load-url">Sample Project</a>
+                            <a href="http://ericrosenbaum.github.io/tone-synth-extension">Documentation</a>
                         </section>
                         <section class="tags">
                             <span class="tag web" title="Web Extension"></span>
