Add littlebits image

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                 <h2>littleBits</h2>
                                 <p class="author">Kreg Hanning</p>
                             </header>
-                            <img src="images/extensions/extension.png" />
+                            <img src="images/extensions/littlebits_small.jpg" />
                         </a>
                         <section class="description">
                             <p>Control littleBits creations</p>
