Add text to extension tag icons

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <a href="http://khanning.github.io/scratch-arduino-extension/">Documentation</a>
                         </section>
                         <section class="tags">
-                            <span class="tag hardware" title="Hardware Extension"></span>
+                            <span class="tag hardware"  data-action="load-url">Sample Project</span>
                         </section>
                     </li>
                     <li>
@@ -167,7 +167,7 @@
                             <a href="http://technoboy10.tk/mesh/">Documentation</a>
                         </section>
                         <section class="tags">
-                            <span class="tag web" title="Web Extension"></span>
+                            <span class="tag web" title="Web Extension">Requires Internet Connection</span>
                         </section>
                     </li>
                     <li>
@@ -184,7 +184,7 @@
                             <a href="http://intel-realsense-extension-for-scratch.github.io/public">Documentation</a>
                         </section>
                         <section class="tags">
-                            <span class="tag hardware" title="Hardware Extension"></span>
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
                         </section>
                     </li>
                     <li>
@@ -201,7 +201,7 @@
                             <a href="http://khanning.github.io/scratch-isstracker-extension/">Documentation</a>
                         </section>
                         <section class="tags">
-                            <span class="tag web" title="Web Extension"></span>
+                            <span class="tag web" title="Web Extension">Requires Internet Connection</span>
                         </section>
                     </li>
                     <li>
@@ -218,7 +218,7 @@
                             <a href="http://khanning.github.io/scratch-leapmotion-extension/">Documentation</a>
                         </section>
                         <section class="tags">
-                            <span class="tag hardware" title="Hardware Extension"></span>
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
                         </section>
                     </li>
                     <li>
@@ -235,7 +235,7 @@
                             <a href="http://khanning.github.io/scratch-littlebits-extension/">Documentation</a>
                         </section>
                         <section class="tags">
-                            <span class="tag hardware" title="Hardware Extension"></span>
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
                         </section>
                     </li>
                     <li>
@@ -252,7 +252,7 @@
                             <a href="http://sayamindu.github.io/scratch-extensions/text-to-speech">Documentation</a>
                         </section>
                         <section class="tags">
-                            <span class="tag web" title="Web Extension"></span>
+                            <span class="tag web" title="Web Extension">Requires Internet Connection</span>
                         </section>
                     </li>
                     <li>
@@ -269,7 +269,7 @@
                             <a href="http://ericrosenbaum.github.io/tone-synth-extension">Documentation</a>
                         </section>
                         <section class="tags">
-                            <span class="tag web" title="Web Extension"></span>
+                            <span class="tag web" title="Web Extension">Requires Internet Connection</span>
                         </section>
                     </li>
                     <li>
@@ -286,7 +286,7 @@
                             <a href="http://technoboy10.tk/twitter/">Documentation</a>
                         </section>
                         <section class="tags">
-                            <span class="tag web" title="Web Extension"></span>
+                            <span class="tag web" title="Web Extension">Requires Internet Connection</span>
                         </section>
                     </li>
                     <li>
@@ -303,7 +303,7 @@
                             <a href="https://github.com/MrYsLab/xi">Documentation</a>
                         </section>
                         <section class="tags">
-                            <span class="tag hardware" title="Hardware Extension"></span>
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
                         </section>
                     </li>
                 </ul>
